Fix when an idea contains too much text

--- a/views/styles.scss
+++ b/views/styles.scss
@@ -197,7 +197,7 @@ body {
       margin: 10px;
       padding: 2px;
       position: relative;
-      height: 50px;
+      min-height: 50px;
 
       a.up, a.down, span.votes { display: none }
 
@@ -207,7 +207,7 @@ body {
         background: rgba(255, 255, 255, 0.4);
         padding: 0;
         margin: 0 32px 0 24px;
-        height: 44px;
+        min-height: 44px;
         cursor: text;
 
         button {
